@@ -1,0 +1,4 @@
+<?php
+
+	global $autofeed;
+	$autofeed = false;
