@@ -1,0 +1,3 @@
+<?php
+
+	echo elgg_view("group_tools/sidebar/featured");
